          that over-ride throw() will still work as before.

        * BUGFIX: Fixed a bug where multiple autodie-derived classes
          would share the same subroutine cache.  This could result
          in excptions from the wrong class being thrown.

          This bug did not affect programs which used only autodie,
          or a single autodie-derived class.

1.995 Sun Nov 30 17:30:16 AUSEDT 2008

        * FEATURE: Errors from 2-argument open now have more human
          friendly error messages for reading, writing, and appending.

        * FEATURE: autodie will never print unsightly references to
          GLOB(0x...) structures in error messages; instead it uses
          the placeholder '$fh'.

        * BUILD: Bundled Module::AutoInstall makes it clear to users
          they need to install IPC::System::Simple for autodying
          system() support.

        * TEST: truncate.t provides more diagnostics on failure.

        * TEST: Tests for better formatted reports from connect().

        * TEST: New 'open.t' contains specific tests for well-formatted
          messages from open().

1.994 Thu Sep 25 16:18:56 AUSEST 2008

        * BUGFIX: flock(), ioctl() and truncate() are now part of
          the :file tag.

        * BUGFIX: link(), mkdir(), rmdir(), symlink() and umask()
          are now part of the :filesys tag.

        * BUGFIX: The new :msg tag contains msgctl(), msgget(), msgrcv(),
          and msgsnd().

        * BUGFIX: The new :semaphore tag contains semctl(), semget()
          and semop().

        * BUGFIX: The new :shm tag contains shmget(), shmread() and
          shmctl().

        * BUGFIX: The new :ipc tag contains :msg, :semaphore, :shm and pipe().

        * BUGFIX: The read(), seek(), sysread(), syswrite() and sysseek()
          methods have been added to :io.

        * BUGFIX: autodie produces more detailed messages on internal
          faults, and is more aggressive about stopping code compilation.
